# BlockVault

./: .blockvault_pids  .env.railway  .gitignore  .railwayignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.yml  generate_test_pdf.py  nixpacks.toml  push_to_github.sh  pyproject.toml  requirements.txt  start.sh  test_infrastructure.py
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
backend/tests/: conftest.py  test_audit.py  test_cases_api.py  test_config.py  test_detection_accuracy.py  test_magic_link.py  test_notifications_api.py  test_redaction_zk.py  test_refresh_tokens.py  test_security.py
blockchain/contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json
blockvault/: __init__.py  mock_cases.py
blockvault-frontend/: index.html  package-lock.json  package.json  tsconfig.json  update_html.py  vercel.json  vite.config.ts
blockvault-frontend/src/: App.tsx  design-system-light.css  index.css
blockvault-redactor/: Dockerfile  integration_guide.md  requirements.txt
blockvault-redactor/app/: config.py  detector.py  docx_engine.py  ocr_engine.py  pdf_engine.py
blockvault-redactor/tests/: test_redactor.py  (+1 more)
contracts/: BlockVaultLegal.sol  FileRegistry.sol  package.json
frontend/: .env.production  package.json  tailwind.config.ts  vitest.config.ts
services/crypto/: Cargo.toml  Dockerfile
tests/: conftest.py  test_detection_accuracy.py  test_key_recovery.py  test_merkle.py  test_notifications_api.py  test_rate_limiter.py  test_redaction_zk.py  test_refresh_tokens.py
(+311 files in other folders)
